# meili-cli

./: Cargo.toml  README.md
src/: command.rs  context.rs  documents.rs  index.rs  main.rs  search.rs  settings.rs  update.rs
