[package]
name = "meili-cli"
version = "0.1.0"
authors = ["mpostma <postma.marin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_url_params = "0.2"
serde = { version =  "1.0.110", features = ["derive"] }
clap = "2.33.1"
serde_json = "1.0"
anyhow = "1.0.31"
